// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getWorkflows Should get workflow by bpmnProcessId and latest version 1`] = `
Object {
  "_shards": Object {
    "failed": 0,
    "skipped": 0,
    "successful": 1,
    "total": 1,
  },
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "2251799813685249",
        "_index": "operate-workflow_",
        "_score": null,
        "_source": Object {
          "bpmnProcessId": "MESSAGE_EVENT",
          "bpmnXml": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<bpmn:definitions xmlns:bpmn=\\"http://www.omg.org/spec/BPMN/20100524/MODEL\\" xmlns:bpmndi=\\"http://www.omg.org/spec/BPMN/20100524/DI\\" xmlns:dc=\\"http://www.omg.org/spec/DD/20100524/DC\\" xmlns:zeebe=\\"http://camunda.org/schema/zeebe/1.0\\" xmlns:di=\\"http://www.omg.org/spec/DD/20100524/DI\\" id=\\"Definitions_00osekx\\" targetNamespace=\\"http://bpmn.io/schema/bpmn\\" exporter=\\"Zeebe Modeler\\" exporterVersion=\\"0.6.2\\">
  <bpmn:process id=\\"MESSAGE_EVENT\\" name=\\"MESSAGE EVENT\\" isExecutable=\\"true\\">
    <bpmn:startEvent id=\\"StartEvent_1\\" name=\\"start event\\">
      <bpmn:outgoing>SequenceFlow_1k0o5cy</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1l6q1nh\\" />
    </bpmn:startEvent>
    <bpmn:serviceTask id=\\"hello\\" name=\\"Hello\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"5\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_1k0o5cy</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_094m070</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1k0o5cy\\" sourceRef=\\"StartEvent_1\\" targetRef=\\"hello\\" />
    <bpmn:boundaryEvent id=\\"BoundaryEvent_184rsr7\\" name=\\"catching\\" attachedToRef=\\"hello\\">
      <bpmn:outgoing>SequenceFlow_0umkghz</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1oxctc1\\" />
    </bpmn:boundaryEvent>
    <bpmn:serviceTask id=\\"ServiceTask_1vxgnug\\" name=\\"World\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"1\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_0umkghz</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_1w1cqrc</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_0umkghz\\" sourceRef=\\"BoundaryEvent_184rsr7\\" targetRef=\\"ServiceTask_1vxgnug\\" />
    <bpmn:endEvent id=\\"EndEvent_021uygl\\">
      <bpmn:incoming>SequenceFlow_094m070</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_094m070\\" sourceRef=\\"hello\\" targetRef=\\"EndEvent_021uygl\\" />
    <bpmn:endEvent id=\\"EndEvent_1o5r87f\\">
      <bpmn:incoming>SequenceFlow_1w1cqrc</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1w1cqrc\\" sourceRef=\\"ServiceTask_1vxgnug\\" targetRef=\\"EndEvent_1o5r87f\\" />
  </bpmn:process>
  <bpmn:message id=\\"Message_1oxctc1\\" name=\\"catching\\">
    <bpmn:extensionElements>
      <zeebe:subscription correlationKey=\\"amount\\" />
    </bpmn:extensionElements>
  </bpmn:message>
  <bpmn:message id=\\"Message_1l6q1nh\\" name=\\"_MESSAGE_START_EVENT_\\" />
  <bpmndi:BPMNDiagram id=\\"BPMNDiagram_1\\">
    <bpmndi:BPMNPlane id=\\"BPMNPlane_1\\" bpmnElement=\\"MESSAGE_EVENT\\">
      <bpmndi:BPMNShape id=\\"StartEvent_0ibdhxr_di\\" bpmnElement=\\"StartEvent_1\\">
        <dc:Bounds x=\\"179\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"171\\" y=\\"146\\" width=\\"52\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_14pv7xx_di\\" bpmnElement=\\"hello\\">
        <dc:Bounds x=\\"265\\" y=\\"81\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1k0o5cy_di\\" bpmnElement=\\"SequenceFlow_1k0o5cy\\">
        <di:waypoint x=\\"215\\" y=\\"121\\" />
        <di:waypoint x=\\"265\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"BoundaryEvent_184rsr7_di\\" bpmnElement=\\"BoundaryEvent_184rsr7\\">
        <dc:Bounds x=\\"347\\" y=\\"143\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"347\\" y=\\"183\\" width=\\"41\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_1vxgnug_di\\" bpmnElement=\\"ServiceTask_1vxgnug\\">
        <dc:Bounds x=\\"433\\" y=\\"201\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_0umkghz_di\\" bpmnElement=\\"SequenceFlow_0umkghz\\">
        <di:waypoint x=\\"365\\" y=\\"179\\" />
        <di:waypoint x=\\"365\\" y=\\"241\\" />
        <di:waypoint x=\\"433\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_021uygl_di\\" bpmnElement=\\"EndEvent_021uygl\\">
        <dc:Bounds x=\\"415\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_094m070_di\\" bpmnElement=\\"SequenceFlow_094m070\\">
        <di:waypoint x=\\"365\\" y=\\"121\\" />
        <di:waypoint x=\\"415\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_1o5r87f_di\\" bpmnElement=\\"EndEvent_1o5r87f\\">
        <dc:Bounds x=\\"583\\" y=\\"223\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1w1cqrc_di\\" bpmnElement=\\"SequenceFlow_1w1cqrc\\">
        <di:waypoint x=\\"533\\" y=\\"241\\" />
        <di:waypoint x=\\"583\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
    </bpmndi:BPMNPlane>
  </bpmndi:BPMNDiagram>
</bpmn:definitions>
",
          "id": "2251799813685249",
          "key": 2251799813685250,
          "name": "MESSAGE EVENT",
          "partitionId": 0,
          "resourceName": "MESSAGE_EVENT.bpmn",
          "version": 1,
        },
        "_type": "_doc",
        "sort": Array [
          1,
        ],
      },
    ],
    "max_score": null,
    "total": 1,
  },
  "timed_out": false,
  "took": 1,
}
`;

exports[`getWorkflows Should get workflow by bpmnProcessId and latest version with "from" param 1`] = `
Object {
  "_shards": Object {
    "failed": 0,
    "skipped": 0,
    "successful": 1,
    "total": 1,
  },
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "2251799813685249",
        "_index": "operate-workflow_",
        "_score": null,
        "_source": Object {
          "bpmnProcessId": "MESSAGE_EVENT",
          "bpmnXml": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<bpmn:definitions xmlns:bpmn=\\"http://www.omg.org/spec/BPMN/20100524/MODEL\\" xmlns:bpmndi=\\"http://www.omg.org/spec/BPMN/20100524/DI\\" xmlns:dc=\\"http://www.omg.org/spec/DD/20100524/DC\\" xmlns:zeebe=\\"http://camunda.org/schema/zeebe/1.0\\" xmlns:di=\\"http://www.omg.org/spec/DD/20100524/DI\\" id=\\"Definitions_00osekx\\" targetNamespace=\\"http://bpmn.io/schema/bpmn\\" exporter=\\"Zeebe Modeler\\" exporterVersion=\\"0.6.2\\">
  <bpmn:process id=\\"MESSAGE_EVENT\\" name=\\"MESSAGE EVENT\\" isExecutable=\\"true\\">
    <bpmn:startEvent id=\\"StartEvent_1\\" name=\\"start event\\">
      <bpmn:outgoing>SequenceFlow_1k0o5cy</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1l6q1nh\\" />
    </bpmn:startEvent>
    <bpmn:serviceTask id=\\"hello\\" name=\\"Hello\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"5\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_1k0o5cy</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_094m070</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1k0o5cy\\" sourceRef=\\"StartEvent_1\\" targetRef=\\"hello\\" />
    <bpmn:boundaryEvent id=\\"BoundaryEvent_184rsr7\\" name=\\"catching\\" attachedToRef=\\"hello\\">
      <bpmn:outgoing>SequenceFlow_0umkghz</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1oxctc1\\" />
    </bpmn:boundaryEvent>
    <bpmn:serviceTask id=\\"ServiceTask_1vxgnug\\" name=\\"World\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"1\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_0umkghz</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_1w1cqrc</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_0umkghz\\" sourceRef=\\"BoundaryEvent_184rsr7\\" targetRef=\\"ServiceTask_1vxgnug\\" />
    <bpmn:endEvent id=\\"EndEvent_021uygl\\">
      <bpmn:incoming>SequenceFlow_094m070</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_094m070\\" sourceRef=\\"hello\\" targetRef=\\"EndEvent_021uygl\\" />
    <bpmn:endEvent id=\\"EndEvent_1o5r87f\\">
      <bpmn:incoming>SequenceFlow_1w1cqrc</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1w1cqrc\\" sourceRef=\\"ServiceTask_1vxgnug\\" targetRef=\\"EndEvent_1o5r87f\\" />
  </bpmn:process>
  <bpmn:message id=\\"Message_1oxctc1\\" name=\\"catching\\">
    <bpmn:extensionElements>
      <zeebe:subscription correlationKey=\\"amount\\" />
    </bpmn:extensionElements>
  </bpmn:message>
  <bpmn:message id=\\"Message_1l6q1nh\\" name=\\"_MESSAGE_START_EVENT_\\" />
  <bpmndi:BPMNDiagram id=\\"BPMNDiagram_1\\">
    <bpmndi:BPMNPlane id=\\"BPMNPlane_1\\" bpmnElement=\\"MESSAGE_EVENT\\">
      <bpmndi:BPMNShape id=\\"StartEvent_0ibdhxr_di\\" bpmnElement=\\"StartEvent_1\\">
        <dc:Bounds x=\\"179\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"171\\" y=\\"146\\" width=\\"52\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_14pv7xx_di\\" bpmnElement=\\"hello\\">
        <dc:Bounds x=\\"265\\" y=\\"81\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1k0o5cy_di\\" bpmnElement=\\"SequenceFlow_1k0o5cy\\">
        <di:waypoint x=\\"215\\" y=\\"121\\" />
        <di:waypoint x=\\"265\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"BoundaryEvent_184rsr7_di\\" bpmnElement=\\"BoundaryEvent_184rsr7\\">
        <dc:Bounds x=\\"347\\" y=\\"143\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"347\\" y=\\"183\\" width=\\"41\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_1vxgnug_di\\" bpmnElement=\\"ServiceTask_1vxgnug\\">
        <dc:Bounds x=\\"433\\" y=\\"201\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_0umkghz_di\\" bpmnElement=\\"SequenceFlow_0umkghz\\">
        <di:waypoint x=\\"365\\" y=\\"179\\" />
        <di:waypoint x=\\"365\\" y=\\"241\\" />
        <di:waypoint x=\\"433\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_021uygl_di\\" bpmnElement=\\"EndEvent_021uygl\\">
        <dc:Bounds x=\\"415\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_094m070_di\\" bpmnElement=\\"SequenceFlow_094m070\\">
        <di:waypoint x=\\"365\\" y=\\"121\\" />
        <di:waypoint x=\\"415\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_1o5r87f_di\\" bpmnElement=\\"EndEvent_1o5r87f\\">
        <dc:Bounds x=\\"583\\" y=\\"223\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1w1cqrc_di\\" bpmnElement=\\"SequenceFlow_1w1cqrc\\">
        <di:waypoint x=\\"533\\" y=\\"241\\" />
        <di:waypoint x=\\"583\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
    </bpmndi:BPMNPlane>
  </bpmndi:BPMNDiagram>
</bpmn:definitions>
",
          "id": "2251799813685249",
          "key": 2251799813685250,
          "name": "MESSAGE EVENT",
          "partitionId": 0,
          "resourceName": "MESSAGE_EVENT.bpmn",
          "version": 1,
        },
        "_type": "_doc",
        "sort": Array [
          1,
        ],
      },
    ],
    "max_score": null,
    "total": 1,
  },
  "timed_out": false,
  "took": 1,
}
`;

exports[`getWorkflows Should get workflow by bpmnProcessId and version 1`] = `
Object {
  "_shards": Object {
    "failed": 0,
    "skipped": 0,
    "successful": 1,
    "total": 1,
  },
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "2251799813685249",
        "_index": "operate-workflow_",
        "_score": 0.2876821,
        "_source": Object {
          "bpmnProcessId": "MESSAGE_EVENT",
          "bpmnXml": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<bpmn:definitions xmlns:bpmn=\\"http://www.omg.org/spec/BPMN/20100524/MODEL\\" xmlns:bpmndi=\\"http://www.omg.org/spec/BPMN/20100524/DI\\" xmlns:dc=\\"http://www.omg.org/spec/DD/20100524/DC\\" xmlns:zeebe=\\"http://camunda.org/schema/zeebe/1.0\\" xmlns:di=\\"http://www.omg.org/spec/DD/20100524/DI\\" id=\\"Definitions_00osekx\\" targetNamespace=\\"http://bpmn.io/schema/bpmn\\" exporter=\\"Zeebe Modeler\\" exporterVersion=\\"0.6.2\\">
  <bpmn:process id=\\"MESSAGE_EVENT\\" name=\\"MESSAGE EVENT\\" isExecutable=\\"true\\">
    <bpmn:startEvent id=\\"StartEvent_1\\" name=\\"start event\\">
      <bpmn:outgoing>SequenceFlow_1k0o5cy</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1l6q1nh\\" />
    </bpmn:startEvent>
    <bpmn:serviceTask id=\\"hello\\" name=\\"Hello\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"5\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_1k0o5cy</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_094m070</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1k0o5cy\\" sourceRef=\\"StartEvent_1\\" targetRef=\\"hello\\" />
    <bpmn:boundaryEvent id=\\"BoundaryEvent_184rsr7\\" name=\\"catching\\" attachedToRef=\\"hello\\">
      <bpmn:outgoing>SequenceFlow_0umkghz</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1oxctc1\\" />
    </bpmn:boundaryEvent>
    <bpmn:serviceTask id=\\"ServiceTask_1vxgnug\\" name=\\"World\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"1\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_0umkghz</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_1w1cqrc</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_0umkghz\\" sourceRef=\\"BoundaryEvent_184rsr7\\" targetRef=\\"ServiceTask_1vxgnug\\" />
    <bpmn:endEvent id=\\"EndEvent_021uygl\\">
      <bpmn:incoming>SequenceFlow_094m070</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_094m070\\" sourceRef=\\"hello\\" targetRef=\\"EndEvent_021uygl\\" />
    <bpmn:endEvent id=\\"EndEvent_1o5r87f\\">
      <bpmn:incoming>SequenceFlow_1w1cqrc</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1w1cqrc\\" sourceRef=\\"ServiceTask_1vxgnug\\" targetRef=\\"EndEvent_1o5r87f\\" />
  </bpmn:process>
  <bpmn:message id=\\"Message_1oxctc1\\" name=\\"catching\\">
    <bpmn:extensionElements>
      <zeebe:subscription correlationKey=\\"amount\\" />
    </bpmn:extensionElements>
  </bpmn:message>
  <bpmn:message id=\\"Message_1l6q1nh\\" name=\\"_MESSAGE_START_EVENT_\\" />
  <bpmndi:BPMNDiagram id=\\"BPMNDiagram_1\\">
    <bpmndi:BPMNPlane id=\\"BPMNPlane_1\\" bpmnElement=\\"MESSAGE_EVENT\\">
      <bpmndi:BPMNShape id=\\"StartEvent_0ibdhxr_di\\" bpmnElement=\\"StartEvent_1\\">
        <dc:Bounds x=\\"179\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"171\\" y=\\"146\\" width=\\"52\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_14pv7xx_di\\" bpmnElement=\\"hello\\">
        <dc:Bounds x=\\"265\\" y=\\"81\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1k0o5cy_di\\" bpmnElement=\\"SequenceFlow_1k0o5cy\\">
        <di:waypoint x=\\"215\\" y=\\"121\\" />
        <di:waypoint x=\\"265\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"BoundaryEvent_184rsr7_di\\" bpmnElement=\\"BoundaryEvent_184rsr7\\">
        <dc:Bounds x=\\"347\\" y=\\"143\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"347\\" y=\\"183\\" width=\\"41\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_1vxgnug_di\\" bpmnElement=\\"ServiceTask_1vxgnug\\">
        <dc:Bounds x=\\"433\\" y=\\"201\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_0umkghz_di\\" bpmnElement=\\"SequenceFlow_0umkghz\\">
        <di:waypoint x=\\"365\\" y=\\"179\\" />
        <di:waypoint x=\\"365\\" y=\\"241\\" />
        <di:waypoint x=\\"433\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_021uygl_di\\" bpmnElement=\\"EndEvent_021uygl\\">
        <dc:Bounds x=\\"415\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_094m070_di\\" bpmnElement=\\"SequenceFlow_094m070\\">
        <di:waypoint x=\\"365\\" y=\\"121\\" />
        <di:waypoint x=\\"415\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_1o5r87f_di\\" bpmnElement=\\"EndEvent_1o5r87f\\">
        <dc:Bounds x=\\"583\\" y=\\"223\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1w1cqrc_di\\" bpmnElement=\\"SequenceFlow_1w1cqrc\\">
        <di:waypoint x=\\"533\\" y=\\"241\\" />
        <di:waypoint x=\\"583\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
    </bpmndi:BPMNPlane>
  </bpmndi:BPMNDiagram>
</bpmn:definitions>
",
          "id": "2251799813685249",
          "key": 2251799813685250,
          "name": "MESSAGE EVENT",
          "partitionId": 0,
          "resourceName": "MESSAGE_EVENT.bpmn",
          "version": 1,
        },
        "_type": "_doc",
      },
    ],
    "max_score": 0.2876821,
    "total": 1,
  },
  "timed_out": false,
  "took": 1,
}
`;

exports[`getWorkflows Should get workflow by key 1`] = `
Object {
  "_shards": Object {
    "failed": 0,
    "skipped": 0,
    "successful": 1,
    "total": 1,
  },
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "2251799813685249",
        "_index": "operate-workflow_",
        "_score": 0.2876821,
        "_source": Object {
          "bpmnProcessId": "MESSAGE_EVENT",
          "bpmnXml": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<bpmn:definitions xmlns:bpmn=\\"http://www.omg.org/spec/BPMN/20100524/MODEL\\" xmlns:bpmndi=\\"http://www.omg.org/spec/BPMN/20100524/DI\\" xmlns:dc=\\"http://www.omg.org/spec/DD/20100524/DC\\" xmlns:zeebe=\\"http://camunda.org/schema/zeebe/1.0\\" xmlns:di=\\"http://www.omg.org/spec/DD/20100524/DI\\" id=\\"Definitions_00osekx\\" targetNamespace=\\"http://bpmn.io/schema/bpmn\\" exporter=\\"Zeebe Modeler\\" exporterVersion=\\"0.6.2\\">
  <bpmn:process id=\\"MESSAGE_EVENT\\" name=\\"MESSAGE EVENT\\" isExecutable=\\"true\\">
    <bpmn:startEvent id=\\"StartEvent_1\\" name=\\"start event\\">
      <bpmn:outgoing>SequenceFlow_1k0o5cy</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1l6q1nh\\" />
    </bpmn:startEvent>
    <bpmn:serviceTask id=\\"hello\\" name=\\"Hello\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"5\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_1k0o5cy</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_094m070</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1k0o5cy\\" sourceRef=\\"StartEvent_1\\" targetRef=\\"hello\\" />
    <bpmn:boundaryEvent id=\\"BoundaryEvent_184rsr7\\" name=\\"catching\\" attachedToRef=\\"hello\\">
      <bpmn:outgoing>SequenceFlow_0umkghz</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1oxctc1\\" />
    </bpmn:boundaryEvent>
    <bpmn:serviceTask id=\\"ServiceTask_1vxgnug\\" name=\\"World\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"1\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_0umkghz</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_1w1cqrc</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_0umkghz\\" sourceRef=\\"BoundaryEvent_184rsr7\\" targetRef=\\"ServiceTask_1vxgnug\\" />
    <bpmn:endEvent id=\\"EndEvent_021uygl\\">
      <bpmn:incoming>SequenceFlow_094m070</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_094m070\\" sourceRef=\\"hello\\" targetRef=\\"EndEvent_021uygl\\" />
    <bpmn:endEvent id=\\"EndEvent_1o5r87f\\">
      <bpmn:incoming>SequenceFlow_1w1cqrc</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1w1cqrc\\" sourceRef=\\"ServiceTask_1vxgnug\\" targetRef=\\"EndEvent_1o5r87f\\" />
  </bpmn:process>
  <bpmn:message id=\\"Message_1oxctc1\\" name=\\"catching\\">
    <bpmn:extensionElements>
      <zeebe:subscription correlationKey=\\"amount\\" />
    </bpmn:extensionElements>
  </bpmn:message>
  <bpmn:message id=\\"Message_1l6q1nh\\" name=\\"_MESSAGE_START_EVENT_\\" />
  <bpmndi:BPMNDiagram id=\\"BPMNDiagram_1\\">
    <bpmndi:BPMNPlane id=\\"BPMNPlane_1\\" bpmnElement=\\"MESSAGE_EVENT\\">
      <bpmndi:BPMNShape id=\\"StartEvent_0ibdhxr_di\\" bpmnElement=\\"StartEvent_1\\">
        <dc:Bounds x=\\"179\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"171\\" y=\\"146\\" width=\\"52\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_14pv7xx_di\\" bpmnElement=\\"hello\\">
        <dc:Bounds x=\\"265\\" y=\\"81\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1k0o5cy_di\\" bpmnElement=\\"SequenceFlow_1k0o5cy\\">
        <di:waypoint x=\\"215\\" y=\\"121\\" />
        <di:waypoint x=\\"265\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"BoundaryEvent_184rsr7_di\\" bpmnElement=\\"BoundaryEvent_184rsr7\\">
        <dc:Bounds x=\\"347\\" y=\\"143\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"347\\" y=\\"183\\" width=\\"41\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_1vxgnug_di\\" bpmnElement=\\"ServiceTask_1vxgnug\\">
        <dc:Bounds x=\\"433\\" y=\\"201\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_0umkghz_di\\" bpmnElement=\\"SequenceFlow_0umkghz\\">
        <di:waypoint x=\\"365\\" y=\\"179\\" />
        <di:waypoint x=\\"365\\" y=\\"241\\" />
        <di:waypoint x=\\"433\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_021uygl_di\\" bpmnElement=\\"EndEvent_021uygl\\">
        <dc:Bounds x=\\"415\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_094m070_di\\" bpmnElement=\\"SequenceFlow_094m070\\">
        <di:waypoint x=\\"365\\" y=\\"121\\" />
        <di:waypoint x=\\"415\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_1o5r87f_di\\" bpmnElement=\\"EndEvent_1o5r87f\\">
        <dc:Bounds x=\\"583\\" y=\\"223\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1w1cqrc_di\\" bpmnElement=\\"SequenceFlow_1w1cqrc\\">
        <di:waypoint x=\\"533\\" y=\\"241\\" />
        <di:waypoint x=\\"583\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
    </bpmndi:BPMNPlane>
  </bpmndi:BPMNDiagram>
</bpmn:definitions>
",
          "id": "2251799813685249",
          "key": 2251799813685250,
          "name": "MESSAGE EVENT",
          "partitionId": 0,
          "resourceName": "MESSAGE_EVENT.bpmn",
          "version": 1,
        },
        "_type": "_doc",
      },
    ],
    "max_score": 0.2876821,
    "total": 1,
  },
  "timed_out": false,
  "took": 1,
}
`;

exports[`getWorkflows Should get workflow by latest version 1`] = `
Object {
  "_shards": Object {
    "failed": 0,
    "skipped": 0,
    "successful": 1,
    "total": 1,
  },
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "2251799813685249",
        "_index": "operate-workflow_",
        "_score": null,
        "_source": Object {
          "bpmnProcessId": "MESSAGE_EVENT",
          "bpmnXml": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<bpmn:definitions xmlns:bpmn=\\"http://www.omg.org/spec/BPMN/20100524/MODEL\\" xmlns:bpmndi=\\"http://www.omg.org/spec/BPMN/20100524/DI\\" xmlns:dc=\\"http://www.omg.org/spec/DD/20100524/DC\\" xmlns:zeebe=\\"http://camunda.org/schema/zeebe/1.0\\" xmlns:di=\\"http://www.omg.org/spec/DD/20100524/DI\\" id=\\"Definitions_00osekx\\" targetNamespace=\\"http://bpmn.io/schema/bpmn\\" exporter=\\"Zeebe Modeler\\" exporterVersion=\\"0.6.2\\">
  <bpmn:process id=\\"MESSAGE_EVENT\\" name=\\"MESSAGE EVENT\\" isExecutable=\\"true\\">
    <bpmn:startEvent id=\\"StartEvent_1\\" name=\\"start event\\">
      <bpmn:outgoing>SequenceFlow_1k0o5cy</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1l6q1nh\\" />
    </bpmn:startEvent>
    <bpmn:serviceTask id=\\"hello\\" name=\\"Hello\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"5\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_1k0o5cy</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_094m070</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1k0o5cy\\" sourceRef=\\"StartEvent_1\\" targetRef=\\"hello\\" />
    <bpmn:boundaryEvent id=\\"BoundaryEvent_184rsr7\\" name=\\"catching\\" attachedToRef=\\"hello\\">
      <bpmn:outgoing>SequenceFlow_0umkghz</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1oxctc1\\" />
    </bpmn:boundaryEvent>
    <bpmn:serviceTask id=\\"ServiceTask_1vxgnug\\" name=\\"World\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"1\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_0umkghz</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_1w1cqrc</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_0umkghz\\" sourceRef=\\"BoundaryEvent_184rsr7\\" targetRef=\\"ServiceTask_1vxgnug\\" />
    <bpmn:endEvent id=\\"EndEvent_021uygl\\">
      <bpmn:incoming>SequenceFlow_094m070</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_094m070\\" sourceRef=\\"hello\\" targetRef=\\"EndEvent_021uygl\\" />
    <bpmn:endEvent id=\\"EndEvent_1o5r87f\\">
      <bpmn:incoming>SequenceFlow_1w1cqrc</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1w1cqrc\\" sourceRef=\\"ServiceTask_1vxgnug\\" targetRef=\\"EndEvent_1o5r87f\\" />
  </bpmn:process>
  <bpmn:message id=\\"Message_1oxctc1\\" name=\\"catching\\">
    <bpmn:extensionElements>
      <zeebe:subscription correlationKey=\\"amount\\" />
    </bpmn:extensionElements>
  </bpmn:message>
  <bpmn:message id=\\"Message_1l6q1nh\\" name=\\"_MESSAGE_START_EVENT_\\" />
  <bpmndi:BPMNDiagram id=\\"BPMNDiagram_1\\">
    <bpmndi:BPMNPlane id=\\"BPMNPlane_1\\" bpmnElement=\\"MESSAGE_EVENT\\">
      <bpmndi:BPMNShape id=\\"StartEvent_0ibdhxr_di\\" bpmnElement=\\"StartEvent_1\\">
        <dc:Bounds x=\\"179\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"171\\" y=\\"146\\" width=\\"52\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_14pv7xx_di\\" bpmnElement=\\"hello\\">
        <dc:Bounds x=\\"265\\" y=\\"81\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1k0o5cy_di\\" bpmnElement=\\"SequenceFlow_1k0o5cy\\">
        <di:waypoint x=\\"215\\" y=\\"121\\" />
        <di:waypoint x=\\"265\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"BoundaryEvent_184rsr7_di\\" bpmnElement=\\"BoundaryEvent_184rsr7\\">
        <dc:Bounds x=\\"347\\" y=\\"143\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"347\\" y=\\"183\\" width=\\"41\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_1vxgnug_di\\" bpmnElement=\\"ServiceTask_1vxgnug\\">
        <dc:Bounds x=\\"433\\" y=\\"201\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_0umkghz_di\\" bpmnElement=\\"SequenceFlow_0umkghz\\">
        <di:waypoint x=\\"365\\" y=\\"179\\" />
        <di:waypoint x=\\"365\\" y=\\"241\\" />
        <di:waypoint x=\\"433\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_021uygl_di\\" bpmnElement=\\"EndEvent_021uygl\\">
        <dc:Bounds x=\\"415\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_094m070_di\\" bpmnElement=\\"SequenceFlow_094m070\\">
        <di:waypoint x=\\"365\\" y=\\"121\\" />
        <di:waypoint x=\\"415\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_1o5r87f_di\\" bpmnElement=\\"EndEvent_1o5r87f\\">
        <dc:Bounds x=\\"583\\" y=\\"223\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1w1cqrc_di\\" bpmnElement=\\"SequenceFlow_1w1cqrc\\">
        <di:waypoint x=\\"533\\" y=\\"241\\" />
        <di:waypoint x=\\"583\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
    </bpmndi:BPMNPlane>
  </bpmndi:BPMNDiagram>
</bpmn:definitions>
",
          "id": "2251799813685249",
          "key": 2251799813685250,
          "name": "MESSAGE EVENT",
          "partitionId": 0,
          "resourceName": "MESSAGE_EVENT.bpmn",
          "version": 1,
        },
        "_type": "_doc",
        "sort": Array [
          1,
        ],
      },
    ],
    "max_score": null,
    "total": 1,
  },
  "timed_out": false,
  "took": 1,
}
`;

exports[`getWorkflows Should get workflows with no query 1`] = `
Object {
  "_shards": Object {
    "failed": 0,
    "skipped": 0,
    "successful": 1,
    "total": 1,
  },
  "hits": Object {
    "hits": Array [
      Object {
        "_id": "2251799813685249",
        "_index": "operate-workflow_",
        "_score": 0.2876821,
        "_source": Object {
          "bpmnProcessId": "MESSAGE_EVENT",
          "bpmnXml": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<bpmn:definitions xmlns:bpmn=\\"http://www.omg.org/spec/BPMN/20100524/MODEL\\" xmlns:bpmndi=\\"http://www.omg.org/spec/BPMN/20100524/DI\\" xmlns:dc=\\"http://www.omg.org/spec/DD/20100524/DC\\" xmlns:zeebe=\\"http://camunda.org/schema/zeebe/1.0\\" xmlns:di=\\"http://www.omg.org/spec/DD/20100524/DI\\" id=\\"Definitions_00osekx\\" targetNamespace=\\"http://bpmn.io/schema/bpmn\\" exporter=\\"Zeebe Modeler\\" exporterVersion=\\"0.6.2\\">
  <bpmn:process id=\\"MESSAGE_EVENT\\" name=\\"MESSAGE EVENT\\" isExecutable=\\"true\\">
    <bpmn:startEvent id=\\"StartEvent_1\\" name=\\"start event\\">
      <bpmn:outgoing>SequenceFlow_1k0o5cy</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1l6q1nh\\" />
    </bpmn:startEvent>
    <bpmn:serviceTask id=\\"hello\\" name=\\"Hello\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"5\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_1k0o5cy</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_094m070</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1k0o5cy\\" sourceRef=\\"StartEvent_1\\" targetRef=\\"hello\\" />
    <bpmn:boundaryEvent id=\\"BoundaryEvent_184rsr7\\" name=\\"catching\\" attachedToRef=\\"hello\\">
      <bpmn:outgoing>SequenceFlow_0umkghz</bpmn:outgoing>
      <bpmn:messageEventDefinition messageRef=\\"Message_1oxctc1\\" />
    </bpmn:boundaryEvent>
    <bpmn:serviceTask id=\\"ServiceTask_1vxgnug\\" name=\\"World\\">
      <bpmn:extensionElements>
        <zeebe:taskDefinition type=\\"topic_demo\\" retries=\\"1\\" />
      </bpmn:extensionElements>
      <bpmn:incoming>SequenceFlow_0umkghz</bpmn:incoming>
      <bpmn:outgoing>SequenceFlow_1w1cqrc</bpmn:outgoing>
    </bpmn:serviceTask>
    <bpmn:sequenceFlow id=\\"SequenceFlow_0umkghz\\" sourceRef=\\"BoundaryEvent_184rsr7\\" targetRef=\\"ServiceTask_1vxgnug\\" />
    <bpmn:endEvent id=\\"EndEvent_021uygl\\">
      <bpmn:incoming>SequenceFlow_094m070</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_094m070\\" sourceRef=\\"hello\\" targetRef=\\"EndEvent_021uygl\\" />
    <bpmn:endEvent id=\\"EndEvent_1o5r87f\\">
      <bpmn:incoming>SequenceFlow_1w1cqrc</bpmn:incoming>
    </bpmn:endEvent>
    <bpmn:sequenceFlow id=\\"SequenceFlow_1w1cqrc\\" sourceRef=\\"ServiceTask_1vxgnug\\" targetRef=\\"EndEvent_1o5r87f\\" />
  </bpmn:process>
  <bpmn:message id=\\"Message_1oxctc1\\" name=\\"catching\\">
    <bpmn:extensionElements>
      <zeebe:subscription correlationKey=\\"amount\\" />
    </bpmn:extensionElements>
  </bpmn:message>
  <bpmn:message id=\\"Message_1l6q1nh\\" name=\\"_MESSAGE_START_EVENT_\\" />
  <bpmndi:BPMNDiagram id=\\"BPMNDiagram_1\\">
    <bpmndi:BPMNPlane id=\\"BPMNPlane_1\\" bpmnElement=\\"MESSAGE_EVENT\\">
      <bpmndi:BPMNShape id=\\"StartEvent_0ibdhxr_di\\" bpmnElement=\\"StartEvent_1\\">
        <dc:Bounds x=\\"179\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"171\\" y=\\"146\\" width=\\"52\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_14pv7xx_di\\" bpmnElement=\\"hello\\">
        <dc:Bounds x=\\"265\\" y=\\"81\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1k0o5cy_di\\" bpmnElement=\\"SequenceFlow_1k0o5cy\\">
        <di:waypoint x=\\"215\\" y=\\"121\\" />
        <di:waypoint x=\\"265\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"BoundaryEvent_184rsr7_di\\" bpmnElement=\\"BoundaryEvent_184rsr7\\">
        <dc:Bounds x=\\"347\\" y=\\"143\\" width=\\"36\\" height=\\"36\\" />
        <bpmndi:BPMNLabel>
          <dc:Bounds x=\\"347\\" y=\\"183\\" width=\\"41\\" height=\\"14\\" />
        </bpmndi:BPMNLabel>
      </bpmndi:BPMNShape>
      <bpmndi:BPMNShape id=\\"ServiceTask_1vxgnug_di\\" bpmnElement=\\"ServiceTask_1vxgnug\\">
        <dc:Bounds x=\\"433\\" y=\\"201\\" width=\\"100\\" height=\\"80\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_0umkghz_di\\" bpmnElement=\\"SequenceFlow_0umkghz\\">
        <di:waypoint x=\\"365\\" y=\\"179\\" />
        <di:waypoint x=\\"365\\" y=\\"241\\" />
        <di:waypoint x=\\"433\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_021uygl_di\\" bpmnElement=\\"EndEvent_021uygl\\">
        <dc:Bounds x=\\"415\\" y=\\"103\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_094m070_di\\" bpmnElement=\\"SequenceFlow_094m070\\">
        <di:waypoint x=\\"365\\" y=\\"121\\" />
        <di:waypoint x=\\"415\\" y=\\"121\\" />
      </bpmndi:BPMNEdge>
      <bpmndi:BPMNShape id=\\"EndEvent_1o5r87f_di\\" bpmnElement=\\"EndEvent_1o5r87f\\">
        <dc:Bounds x=\\"583\\" y=\\"223\\" width=\\"36\\" height=\\"36\\" />
      </bpmndi:BPMNShape>
      <bpmndi:BPMNEdge id=\\"SequenceFlow_1w1cqrc_di\\" bpmnElement=\\"SequenceFlow_1w1cqrc\\">
        <di:waypoint x=\\"533\\" y=\\"241\\" />
        <di:waypoint x=\\"583\\" y=\\"241\\" />
      </bpmndi:BPMNEdge>
    </bpmndi:BPMNPlane>
  </bpmndi:BPMNDiagram>
</bpmn:definitions>
",
          "id": "2251799813685249",
          "key": 2251799813685250,
          "name": "MESSAGE EVENT",
          "partitionId": 0,
          "resourceName": "MESSAGE_EVENT.bpmn",
          "version": 1,
        },
        "_type": "_doc",
      },
    ],
    "max_score": 0.2876821,
    "total": 1,
  },
  "timed_out": false,
  "took": 1,
}
`;

exports[`getWorkflows Should not get workflow by bpmnProcessId with "from" out of range 1`] = `
Object {
  "_shards": Object {
    "failed": 0,
    "skipped": 0,
    "successful": 1,
    "total": 1,
  },
  "hits": Object {
    "hits": Array [],
    "max_score": 0.2876821,
    "total": 1,
  },
  "timed_out": false,
  "took": 0,
}
`;

exports[`getWorkflows Should not get workflow with bad version but good bpmnProcessId 1`] = `
Object {
  "_shards": Object {
    "failed": 0,
    "skipped": 0,
    "successful": 1,
    "total": 1,
  },
  "hits": Object {
    "hits": Array [],
    "max_score": 0.2876821,
    "total": 1,
  },
  "timed_out": false,
  "took": 0,
}
`;
